# depores

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0d70072327e9_create_sports_table.py
app/: database.py  main.py
app/crud/: business.py
app/external_apis/: rapidapi.py
app/internal/: admin.py
app/models/: __init__.py  business.py  user.py
app/routers/: business.py  users.py
app/schemas/: business.py
